General refactor, fix some code smells